// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`save with id, load, delete 1`] = `
Object {
  "a": "aa",
  "b": "bb",
  "c": 1,
  "created": 1529539200,
  "id": "randomid123",
  "updated": 1529539200,
}
`;

exports[`save, generate id, load 1`] = `
Object {
  "a": "aa",
  "b": "bb",
  "c": 1,
  "created": 1529539200,
  "id": "randomDatastoreService1",
  "updated": 1529539200,
}
`;

exports[`save, generate id, load 2`] = `
Object {
  "a": "aa",
  "b": "bb",
  "c": 1,
  "created": 1529539200,
  "id": "randomDatastoreService1",
  "updated": 1529539200,
}
`;
